--- a/index.html
+++ b/index.html
@@ -1,28 +1,96 @@
-<!DOCTYPE html>
+<!doctype html>
+<html lang="en-US">
 <html>
-	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-	</body>
+<body>
+
+<head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="Description" content="Information on how much money and energy saved in Phantasma, leaderboards and mission statement">
+  <meta name="Keywords" content="Vampire energy, Money Saving, Phantasma">
+  <meta name="Author" content="Alex Pan & Sidney Hough">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <meta name = "application-name" content = "Phantasma">
+  <link rel="stylesheet" type="text/css"href="Styling.css">
+  <script src="app.js" type = "application/ javascript"></script>
+
+<script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyCvhdrlLIZ6ta27jr3tsjN9TOT9ckzTKSA",
+    authDomain: "phantasma-app.firebaseapp.com",
+    databaseURL: "https://phantasma-app.firebaseio.com",
+    projectId: "phantasma-app",
+    storageBucket: "phantasma-app.appspot.com",
+    messagingSenderId: "1032090528080"
+  };
+  firebase.initializeApp(config);
+</script>
+<script src="firebase logistics.js"></script>
+<script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyCvhdrlLIZ6ta27jr3tsjN9TOT9ckzTKSA",
+      authDomain: "phantasma-app.firebaseapp.com",
+      databaseURL: "https://phantasma-app.firebaseio.com",
+      projectId: "phantasma-app",
+      storageBucket: "phantasma-app.appspot.com",
+      messagingSenderId: "1032090528080"
+    };
+    firebase.initializeApp(config);
+  </script>
+</head>
+
+<!--<button>About Us</button> 
+<button>Calculator</button>-->
+
+
+<!--h goes from 1-6 with 1 being biggest. Where h is determines where it is on webpage and # determines size-->
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="slogan">
+  <b style = "font-family: Verdana, Geneva, sans-serif; color: white; font-size: 80px;"> P h a n t a s m a </b>
+  <p style = "font-family: Verdana, Geneva, sans-serif; color: white; font-size: 35px;" > Slaying Vampires Saving Money </p>
+</div>
+<br>
+<br>
+<div class = "img">
+    <img title="This what the mobile app looks like" src="www.jpg" width="600" height="600">
+</div>
+<br>
+<br>
+<br>      
+<div class="fixed">
+<table>
+    <tr>
+      <th>Total Energy Saved</th>
+      <th>Total Money saved</th>
+      <th>Number of Users</th>
+    </tr>
+    <tr>
+      <td id = johNNy></td>
+      <td id = joHnny></td>
+      <td id = imagod></td>
+    </tr>
+  </table>
+</div>
+<ul>
+    <li1><a style="font-size:40px;" class = "TITLE">P h a n t a s m a</a></li1>
+    <li><a></a></li>
+    <li><a></a></li>
+    <li><a></a></li>    
+    <li><a style="font-size:28.9px;" class = "active" href="Phantasma .html">Home</a></li>
+    <li><a style="font-size:28.9px;" class = "button" href="Calc.html">Calculator</a></li>
+    <li><a style="font-size:28.9px;" class = "button" href="about.html">About</a></li>
+</ul>
+
+<!--<a href="https://docs.google.com/document/d/1ComOiEkxwUSq5SZHDXkVDehPcXBImtgHlz2jwPEJ8JM/edit">This is a link</a> -->
+
+
+
+</body>
 </html>
