--- a/About.html
+++ b/About.html
@@ -48,7 +48,7 @@
     <li><a></a></li>     
     <li><a style="font-size:28.9px;" class = "button" href="Phantasma .html">Home</a></li>
     <li><a style="font-size:28.9px;" class = "button" href="Calc.html">Calculator</a></li>
-    <li><a style="font-size:28.9px;" class = "active" href="about.html">About</a></li>
+    <li><a style="font-size:28.9px;" class = "active" href="About.html">About</a></li>
 </ul>
 
 <!--<a href="https://docs.google.com/document/d/1ComOiEkxwUSq5SZHDXkVDehPcXBImtgHlz2jwPEJ8JM/edit">This is a link</a> -->
