Update Phantasma .html

--- a/Phantasma .html
+++ b/Phantasma .html
@@ -113,7 +113,7 @@ db.collection("stats").get().then((querySnapshot) => {
     <li><a></a></li>    
     <li><a style="font-size:28.9px;" class = "active" href="Phantasma .html">Home</a></li>
     <li><a style="font-size:28.9px;" class = "button" href="Calc.html">Calculator</a></li>
-    <li><a style="font-size:28.9px;" class = "button" href="about.html">About</a></li>
+    <li><a style="font-size:28.9px;" class = "button" href="About.html">About</a></li>
 </ul>
 
 <!--<a href="https://docs.google.com/document/d/1ComOiEkxwUSq5SZHDXkVDehPcXBImtgHlz2jwPEJ8JM/edit">This is a link</a> -->
