--- a/Phantasma .html
+++ b/Phantasma .html
@@ -87,7 +87,7 @@ db.collection("stats").get().then((querySnapshot) => {
 <br>
 <br>
 <div class = "img">
-    <img title="This what the mobile app looks like" src="www.jpg" width="600" height="600">
+    <img title="This what the mobile app looks like" src="www.png" width="600" height="600">
 </div>
 <br>
 <br>
