--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <br>
 <br>
 <div class = "img">
-    <img title="This what the mobile app looks like" src="www.jpg" width="600" height="600">
+    <img title="This what the mobile app looks like" src="www.png" width="600" height="600">
 </div>
 <br>
 <br>
