--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 <p style="font-size:60px;"> Who are we? </p>
 <p style="font-size:30px; color: white"> We are Saratoga High School Juniors. We are avid coders and care for the environment.</p>
 <p style="font-size:30px; color: white"> As users of many electronics we have first hand experience with the phantom power and counteracting the adverse affects on people's </p>
-<p style="font-size:30px; color: white"> Thus we are gods PRAISE us!</p>
+<p style="font-size:30px; color: white"> lifes and the environment</p>
 
 
 <br>
