Update Phantasma .html

--- a/Phantasma .html
+++ b/Phantasma .html
@@ -107,7 +107,7 @@ db.collection("stats").get().then((querySnapshot) => {
   </table>
 </div>
 <ul>
-    <li1><a style="font-size:40px;" class = "TITLE">P h a n t a s m a</a></li1>
+    <li1><a style="font-size:40px;" class = "TITLE">P H A N T A S M A</a></li1>
     <li><a></a></li>
     <li><a></a></li>
     <li><a></a></li>    
