--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 <br>
 <br>
 <div class="slogan">
-  <b style = "font-family: Verdana, Geneva, sans-serif; color: white; font-size: 80px;"> P h a n t a s m a </b>
+  <b style = "font-family: Verdana, Geneva, sans-serif; color: white; font-size: 80px;"> P H A N T A S M A </b>
   <p style = "font-family: Verdana, Geneva, sans-serif; color: white; font-size: 35px;" > Slaying Vampires Saving Money </p>
 </div>
 <br>
 <br>
 <div class = "img">
-    <img title="This what the mobile app looks like" src="www.png" width="600" height="600">
+    <img title="This what the mobile app looks like" src="www.png" width="600" height="900">
 </div>
 <br>
 <br>
