--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <br>
 <br>
 <div class = "img">
-    <img title="This what the mobile app looks like" src="www.png" width="600" height="900">
+    <img title="This what the mobile app looks like" src="www.png" width="600" height="850">
 </div>
 <br>
 <br>
@@ -79,7 +79,7 @@
   </table>
 </div>
 <ul>
-    <li1><a style="font-size:40px;" class = "TITLE">P h a n t a s m a</a></li1>
+    <li1><a style="font-size:40px;" class = "TITLE">P H A N T A S M A</a></li1>
     <li><a></a></li>
     <li><a></a></li>
     <li><a></a></li>    
