--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 <br>
 <br>
 <div class="slogan">
-  <b style = "font-family: Verdana, Geneva, sans-serif; color: white; font-size: 80px;"> P H A N T A S M A </b>
-  <p style = "font-family: Verdana, Geneva, sans-serif; color: white; font-size: 35px;" > Slaying Vampires Saving Money </p>
+  <b style = "font-family: Verdana, Geneva, sans-serif; color: white; font-size: 80px;"> PHANTASMA</b>
+  <p style = "font-family: Verdana, Geneva, sans-serif; color: white; font-size: 35px;" > Slay Vampires. Save Energy and Money </p>
 </div>
 <br>
 <br>
