--- a/Phantasma .html
+++ b/Phantasma .html
@@ -54,7 +54,7 @@
 <br>
 <div class="slogan">
   <b style = "font-family: Verdana, Geneva, sans-serif; color: white; font-size: 80px;"> PHANTASMA</b>
-  <p style = "font-family: Verdana, Geneva, sans-serif; color: white; font-size: 35px;" > Slaying Vampires Saving Money </p>
+  <p style = "font-family: Verdana, Geneva, sans-serif; color: white; font-size: 35px;" > Slay Vampires. Save Energy and Money </p>
 </div>
 <br>
 <br>
